WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231717
Compilation error: error: definition of implicit copy assignment operator in AppHighlightRangeData.h
https://bugs.webkit.org/show_bug.cgi?id=231717
Summary
Compilation error: error: definition of implicit copy assignment operator in ...
Jean-Yves Avenard [:jya]
Reported
2021-10-13 20:37:26 PDT
In file included from ./Modules/highlight/AppHighlightRangeData.cpp:27: ./Modules/highlight/AppHighlightRangeData.h:80:5: error: definition of implicit copy assignment operator for 'AppHighlightRangeData' is deprecated because it has a user-declared copy constructor [-Werror,-Wdeprecated-copy] AppHighlightRangeData(const AppHighlightRangeData&) = default; ./Modules/highlight/AppHighlightRangeData.cpp:51:13: note: in instantiation of function template specialization 'WTF::Persistence::Decoder::operator>><WebCore::AppHighlightRangeData, nullptr>' requested here decoder >> data;
Attachments
Patch
(1.69 KB, patch)
2021-10-13 20:53 PDT
,
Jean-Yves Avenard [:jya]
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-13 20:37:43 PDT
<
rdar://problem/84230745
>
Jean-Yves Avenard [:jya]
Comment 2
2021-10-13 20:53:19 PDT
Created
attachment 441181
[details]
Patch
EWS
Comment 3
2021-10-13 22:14:39 PDT
Committed
r284147
(
242967@main
): <
https://commits.webkit.org/242967@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441181
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug