Compilation error: error: definition of implicit copy assignment operator in AppHighlightRangeData.h https://bugs.webkit.org/show_bug.cgi?id=231717 rdar://problem/84230745

Reviewed by Tim Horton.

Per C++11 and later:
“The generation of the implicitly-defined copy assignment operator is
deprecated if T has a user-declared destructor or user-declared copy
constructor.”
A copy constructor is defined, so we need to declare a copy assignement operator.

* Modules/highlight/AppHighlightRangeData.h: Add copy assignment operator.


Canonical link: https://commits.webkit.org/242967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284147 268f45cc-cd09-0410-ab3c-d52691b4dbfc